<resources>
    <string name="app_name">Toolbox</string>
    <string name="barcode_scanner">Barcode Scanner</string>
    <string name="speech_to_text">Speech to text</string>
    <string name="text_to_speech">Text to speech</string>
    <string name="flashlight">Flashlight</string>
    <string name="current_affairs">Current affairs</string>
    <string name="scan_qr_code" />
    <string name="scan_1d_barcode">Scan 1d barcode</string>
    <string name="scan_qrcode">Scan qr code</string>
    <string name="time">time</string>
    <string name="news_author">news_author</string>
    <string name="this_is_news_description_bla_bla_bla">this_is_news_description</string>
    <string name="check_pronounciation">Check pronounciation</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="capture_image">Capture Image</string>
    <string name="save_image">Save Image</string>
    <string name="your_image_will_appear_here">Your Image will appear here</string>
    <string name="weather">Weather</string>
    <string name="compass">compass</string>
    <string name="screen_recorder">Screen Recorder</string>
    <string name="audio">Audio</string>
    <string name="start_recording">Start Recording</string>
    <string name="record_with_audio">Record with Audio</string>
</resources>
